--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - name: Checkout repository
@@ -24,10 +24,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install runtime + dev dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt -r dev-requirements.txt
 
     - name: Lint with flake8
       run: |
@@ -37,4 +37,3 @@ jobs:
     - name: Run tests with pytest
       run: |
         pytest --cov=persichetti --cov-report=term-missing
-
